# qtvtk

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: spack-ci.yml  spack-ubuntu.yml
cmake/: common.cmake  organization.cmake  qtvtk_common.cmake  version.cmake
src/: CMakeLists.txt
src/QtVtk/: CMakeLists.txt  QtVTKFontParametersPanel.cpp  QtVTKPointLocalizatorDialog.cpp  QtVTKPointLocalizatorPanel.cpp  QtVTKPrintHelper.cpp  QtVtk.cpp  QtVtk.doxygen  QtVtk.qrc  QtVtkCoordinatesPanel.cpp  QtVtkGraphicWidget.cpp  QtVtkTransformationPanel.cpp  QtVtkViewDefinitionDialog.cpp  QtVtkViewDefinitionPanel.cpp  QtVtkViewPointToolBar.cpp  QtVtkViewPointToolButton.cpp  vtkECMIntersectionPolyDataFilter.cpp  vtkPatchedDelaunay2D.cpp  vtkSimpleTriangleFilter.cpp
src/QtVtk/cmake/: QtVtkConfig.cmake.in
src/QtVtk/images/: intrinsic_all.afphoto  intrinsic_all_2.afphoto  intrinsic_phi_30.afphoto  intrinsic_phi_30_theta_15.afphoto  intrinsic_phi_30_theta_15_omega_10.afphoto  spherique.afphoto
src/QtVtk/public/QtVtk/: QtVTKFontParametersPanel.h  QtVTKPointLocalizatorDialog.h  QtVTKPointLocalizatorPanel.h  QtVTKPrintHelper.h  QtVtk.h  QtVtkCoordinatesPanel.h  QtVtkGraphicWidget.h  QtVtkTransformationPanel.h  QtVtkViewDefinitionDialog.h  QtVtkViewDefinitionPanel.h  QtVtkViewPointToolBar.h  QtVtkViewPointToolButton.h  vtkECMIntersectionPolyDataFilter.h  vtkPatchedDelaunay2D.h  vtkSimpleTriangleFilter.h
src/test_hardware_selection/: CMakeLists.txt  QtHardwareSelectionWindow.cpp  QtHardwareSelectionWindow.h  VTKHardwareSelectionInteractorStyle.cpp  VTKHardwareSelectionInteractorStyle.h  hardware_selection.cpp
src/viewpoint/: CMakeLists.txt  QtViewPointWindow.cpp  QtViewPointWindow.h  viewpoint.cpp
test_link/: CMakeLists.txt  main.cpp
